--- a/style.css
+++ b/style.css
@@ -104,7 +104,69 @@ body {
 .contacts .row form .gender #male:checked ~ label[for=male] {
     color: orangered;
 }
+.contacts .row1 {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
 
+.contacts .row1 .img {
+    flex: 1 1 40rem;
+}
+
+.contacts .row1 form {
+    flex: 1 1 40rem;
+}
+
+.contacts .row1 form .box {
+    width: 100%;
+    margin: 1rem 0rem 2rem;
+    border-radius: 0.5rem;
+    padding: 0.8rem;
+}
+
+.contacts .row1 form span {
+    color: #f2f2f2;
+    font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.contacts .row1 form .gender {
+    margin: 1rem 0rem 2rem;
+}
+
+.contacts .row1 form .gender label {
+    margin-left: 0.2rem;
+    font-size: 1.6rem;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
+.contacts .row1 form .gender #female {
+    margin-left: 2rem;
+}
+
+.contacts .row1 form .gender input {
+    appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #f2f2f2;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.contacts .row1 form .gender input:checked {
+    background-color: orangered;
+    border-radius: 50%;
+}
+
+.contacts .row1 form .gender #female:checked ~ label[for=female] {
+    color: orangered;
+}
+
+.contacts .row1 form .gender #male:checked ~ label[for=male] {
+    color: orangered;
+}
 .btn {
     padding: 1rem 3rem;
     border-radius: 1.5rem;
